picker for choosing the folder in gdrive

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 //android.defaults.buildfeatures.buildconfig=true
 android.disallowKotlinSourceSets=false
+
+# Google Drive Picker config (web)
+# drivePickerApiKey=YOUR_API_KEY
+# drivePickerAppId=YOUR_PROJECT_NUMBER
